fix for updated api

--- a/notebooks/prometheus_anomaly_detection_test.ipynb
+++ b/notebooks/prometheus_anomaly_detection_test.ipynb
@@ -36,6 +36,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install https://github.com/4n4nd/prometheus-api-client-python/zipball/v0.0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os \n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -43,6 +52,7 @@
     "from prometheus_api_client import Metric, MetricsList, PrometheusConnect\n",
     "import matplotlib.pyplot as plt \n",
     "import time\n",
+    "from datetime import datetime\n",
     "from fbprophet import Prophet\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +82,8 @@
     "# and can provide the entire label_config.\n",
     "\n",
     "\n",
-    "def prometheus_anoamly_test(query_range, training_window, metric_name, label_config, prom_url, prom_token, threshold):\n",
+    "def prometheus_anoamly_test(start_time, end_time, training_window, metric_name, \n",
+    "                            label_config, prom_url, prom_token, threshold):\n",
     "    \n",
     "\n",
     "    # Read data into memory and convert to a Metric list Object\n",
@@ -81,8 +92,8 @@
     "                                                     disable_ssl=True)\n",
     "    \n",
     "    metric_data = prom.get_metric_range_data(metric_name=metric_name,\n",
-    "                                         start_time=query_range[1],\n",
-    "                                         end_time=query_range[0],\n",
+    "                                         start_time=start_time,\n",
+    "                                         end_time=end_time,\n",
     "                                         label_config=label_config)\n",
     "    \n",
     "    metrics = MetricsList(metric_data)\n",
@@ -200,13 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# example configurations\n",
     "metric_name=\"name\"\n",
-    "query_range = ('end_time','start_time') \n",
+    "start_time = datetime.fromtimestamp(1000000000)\n",
+    "end_time = datetime.fromtimestamp(1000000001)\n",
     "label_config={}\n",
     "\n",
     "prom_url = 'prometheus route'\n",
@@ -217,8 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -227,7 +241,9 @@
        "<Figure size 1440x720 with 1 Axes>"
       ]
      },
-     "metadata": {},
+     "metadata": {
+      "needs_background": "light"
+     },
      "output_type": "display_data"
     }
    ],
@@ -236,8 +252,8 @@
     "                                                 disable_ssl=True)\n",
     "\n",
     "metric_data = prom.get_metric_range_data(metric_name=metric_name,\n",
-    "                                     start_time=query_range[1],\n",
-    "                                     end_time=query_range[0],\n",
+    "                                     start_time=start_time,\n",
+    "                                     end_time=end_time,\n",
     "                                     label_config=label_config)\n",
     "\n",
     "metrics = MetricsList(metric_data)\n",
@@ -252,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "ground truth anomlies 21\n",
-      "forecast anomalies 50\n",
+      "forecast anomalies 49\n",
       "number of data points 59\n",
       "true positive rate 1.0\n",
       "2019-07-10 02:47:00.825000048 training window end\n",
@@ -462,7 +478,7 @@
      "output_type": "stream",
      "text": [
       "ground truth anomlies 25\n",
-      "forecast anomalies 43\n",
+      "forecast anomalies 41\n",
       "number of data points 59\n",
       "true positive rate 1.0\n",
       "2019-07-10 08:47:00.825000048 training window end\n",
@@ -486,7 +502,7 @@
       "ground truth anomlies 16\n",
       "forecast anomalies 34\n",
       "number of data points 59\n",
-      "true positive rate 0.875\n",
+      "true positive rate 0.9375\n",
       "2019-07-10 09:47:00.825000048 training window end\n",
       "2019-07-10 10:47:00.825000048 test window end\n",
       "2019-07-10 09:47:00.825000048 training window end\n",
@@ -508,7 +524,7 @@
       "ground truth anomlies 26\n",
       "forecast anomalies 37\n",
       "number of data points 59\n",
-      "true positive rate 0.8846153846153846\n",
+      "true positive rate 0.8461538461538461\n",
       "2019-07-10 10:47:00.825000048 training window end\n",
       "2019-07-10 11:47:00.825000048 test window end\n",
       "2019-07-10 10:47:00.825000048 training window end\n",
@@ -528,7 +544,7 @@
      "output_type": "stream",
      "text": [
       "ground truth anomlies 23\n",
-      "forecast anomalies 47\n",
+      "forecast anomalies 45\n",
       "number of data points 59\n",
       "true positive rate 0.8695652173913043\n",
       "2019-07-10 11:47:00.825000048 training window end\n",
@@ -550,7 +566,7 @@
      "output_type": "stream",
      "text": [
       "ground truth anomlies 7\n",
-      "forecast anomalies 50\n",
+      "forecast anomalies 49\n",
       "number of data points 59\n",
       "true positive rate 1.0\n",
       "2019-07-10 12:47:00.825000048 training window end\n",
@@ -778,24 +794,24 @@
       "2019-07-10 22:47:00.825000048 training window end\n",
       "2019-07-10 23:47:00.825000048 test window end\n",
       "ground truth anomlies 36\n",
-      "forecast anomalies 40\n",
+      "forecast anomalies 42\n",
       "number of data points 59\n",
-      "true positive rate 0.9166666666666666\n"
+      "true positive rate 0.9444444444444444\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.9694444444444444"
+       "0.9722222222222222"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prometheus_anoamly_test(query_range, training_window, metric_name, label_config, prom_url, prom_token, threshold)"
+    "prometheus_anoamly_test(start_time, end_time,training_window, metric_name, label_config, prom_url, prom_token, threshold)"
    ]
   },
   {
